Scss fixes on mobile view

--- a/src/app/not-found/not-found.component.scss
+++ b/src/app/not-found/not-found.component.scss
@@ -7,7 +7,7 @@
 .txt-container{
   width: 100%;
   position: absolute; 
-  bottom: 0px;
+  bottom: -8px;
   padding: 15px;
   text-align: center;
   background-color: $tertiary;
